SubBt/force-app/main/default/objects/BT_Payments__c/BT_Payments__c.object-meta.xml
<CustomObject>
    <description>This object is not using</description>
    <label>Not Using</label>
    <nameField>
        <label>Payment Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Payments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>