SubBt/force-app/main/default/objects/BT_Payments__c/fields/Payment_Number__c.field-meta.xml
<CustomField>
    <fullName>Payment_Number__c</fullName>
    <displayFormat>PT-{0000}</displayFormat>
    <label>Payment Number</label>
    <type>AutoNumber</type>
</CustomField>