SubBt/force-app/main/default/objects/BT_Payments__c/fields/Transaction_Number__c.field-meta.xml
<CustomField>
    <fullName>Transaction_Number__c</fullName>
    <label>Transaction Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>